--- a/farmer.html
+++ b/farmer.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>AGRI-ELEVATE - Farmer Dashboard</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
@@ -22,15 +22,34 @@ body { margin:0; font-family: Arial,sans-serif; background:linear-gradient(135de
 .add-btn{width:50px;height:50px;background:rgba(255,255,255,0.25);border-radius:50%;font-size:30px;display:flex;align-items:center;justify-content:center;cursor:pointer;transition:0.3s;backdrop-filter:blur(10px);box-shadow:0 6px 20px rgba(0,0,0,0.35);}
 .add-btn:hover{transform:scale(1.1);}
 .profile{width:50px;height:50px;border-radius:50%;background:url('https://cdn-icons-png.flaticon.com/512/3135/3135715.png');background-size:cover;cursor:pointer;border:2px solid rgba(255,255,255,0.7);position:relative;}
-.profile-menu{position:absolute;top:60px;right:0;width:220px;background:rgba(255,255,255,0.25);backdrop-filter:blur(12px);border-radius:15px;padding:10px 0;display:none;box-shadow:0 6px 20px rgba(0,0,0,0.3);z-index:10;}
+
+/* Make sure the profile menu sits on top of everything */
+.profile-menu{
+    position:absolute;
+    top:60px;
+    right:0;
+    width:220px;
+    background:rgba(255,255,255,0.25);
+    backdrop-filter:blur(12px);
+    border-radius:15px;
+    padding:10px 0;
+    display:none;
+    box-shadow:0 6px 20px rgba(0,0,0,0.3);
+    z-index:10050;            /* very high so it won't go behind cards */
+    pointer-events:auto;
+}
 .profile-menu div{padding:12px 20px;cursor:pointer;transition:0.2s;}
 .profile-menu div:hover{background:rgba(255,255,255,0.35);}
-.products{display:grid;grid-template-columns:repeat(auto-fill,minmax(240px,240px));gap:22px;padding:25px;justify-content:center;z-index:2;position:relative;}
+
+/* Ensure products are below profile menu */
+.products{display:grid;grid-template-columns:repeat(auto-fill,minmax(240px,240px));gap:22px;padding:25px;justify-content:center;z-index:1;position:relative;}
 .card{background:rgba(255,255,255,0.25);backdrop-filter:blur(10px);border-radius:20px;padding:15px;text-align:center;transition:0.3s;box-shadow:0 6px 18px rgba(0,0,0,0.2);}
 .card:hover{background:rgba(255,255,255,0.35);transform:scale(1.05);}
 .card img{width:100%;height:150px;border-radius:12px;object-fit:cover;}
 .actions button{border:none;padding:8px 14px;border-radius:10px;font-size:20px;cursor:pointer;margin:5px;background:rgba(255,255,255,0.28);}
 .actions button:hover{background:rgba(255,255,255,0.45);}
+
+/* popup / earnings styles (unchanged) */
 .popup{position:fixed;inset:0;background:rgba(0,0,0,0.65);display:none;justify-content:center;align-items:center;z-index:5;}
 .popup-box{background:rgba(255,255,255,0.3);backdrop-filter:blur(10px);padding:25px;width:90%;max-width:380px;border-radius:20px;display:flex;flex-direction:column;gap:10px;color:black;}
 .popup-box input,.popup-box select{padding:12px;border-radius:12px;border:none;width:100%;}
@@ -59,13 +78,14 @@ body { margin:0; font-family: Arial,sans-serif; background:linear-gradient(135de
     <div class="right-actions">
         <div class="stat-card earnings" onclick="showEarnings()"><h2 id="earnings">Earnings: ₹ 0</h2><p>Click to view details</p></div>
         <div class="add-btn" onclick="openForm()">+</div>
-        <div class="profile" onclick="toggleProfileMenu()">
+        <div class="profile" id="profileBtn">
+            <!-- profile-menu kept inside profile for positioning, but z-index ensures visibility -->
             <div class="profile-menu" id="profileMenu">
                 <div>My Details</div>
                 <div>Security</div>
                 <div>Privacy</div>
                 <div>Help & Support</div>
-                <div onclick="logout()">Logout</div>
+                <div id="logoutBtn">Logout</div>
             </div>
         </div>
     </div>
@@ -113,9 +133,26 @@ let products=[];
 let editIndex=-1;
 let transactionsData=[];
 
-/* PROFILE MENU */
-function toggleProfileMenu(){let menu=document.getElementById("profileMenu"); menu.style.display=menu.style.display==="block"?"none":"block";}
-function logout(){window.location.href="roles.html";}
+/* PROFILE MENU & LOGOUT */
+const profileBtn = document.getElementById('profileBtn');
+const profileMenu = document.getElementById('profileMenu');
+const logoutBtn = document.getElementById('logoutBtn');
+
+function logout(){ window.location.href = "roles.html"; }
+logoutBtn.addEventListener('click', logout);
+
+// Toggle menu when clicking the profile button (stop propagation)
+profileBtn.addEventListener('click', function(e){
+    e.stopPropagation();
+    profileMenu.style.display = profileMenu.style.display === 'block' ? 'none' : 'block';
+});
+
+// Click-away to close the menu
+document.addEventListener('click', function(e){
+    if (!e.target.closest('#profileBtn') && !e.target.closest('#profileMenu')) {
+        profileMenu.style.display = 'none';
+    }
+});
 
 /* PRODUCT FUNCTIONS */
 function openForm(){document.getElementById("popup").style.display="flex";document.getElementById("formTitle").innerText="Add Product"; editIndex=-1; resetForm();}
