--- a/roles.html
+++ b/roles.html
@@ -1,92 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Roles</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      min-height: 100vh;
-      background: #f0f0f0;
-      margin: 0;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Roles</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    background: linear-gradient(135deg, #4CAF50, #2E7D32);
+  }
 
+  .navbar {
+    width: 90%;
+    max-width: 1000px;
+    background-color: rgba(255,255,255,0.2);
+    padding: 15px;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 15px;
+    margin-bottom: 40px;
+    backdrop-filter: blur(10px);
+  }
+
+  .navbar a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+
+  .navbar a:hover {
+    background: rgba(255,255,255,0.3);
+    color: #000;
+    border-radius: 10px;
+  }
+
+  .role-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    flex-wrap: wrap;
+    width: 90%;
+    max-width: 1000px;
+  }
+
+  .role-card {
+    flex: 1 1 300px;
+    height: 220px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+    text-align: center;
+    padding: 30px 20px;
+    color: white;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    text-decoration: none;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+  }
+
+  .farmer { background: linear-gradient(135deg, #27ae60, #2ecc71); }
+  .buyer { background: linear-gradient(135deg, #1abc9c, #16a085); }
+
+  .role-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 15px 35px rgba(0,0,0,0.4);
+  }
+
+  h2 {
+    font-size: 2rem;
+    margin-bottom: 10px;
+    text-shadow: 0 2px 4px rgba(0,0,0,0.4);
+  }
+
+  p {
+    font-size: 1rem;
+    line-height: 1.3;
+  }
+
+  @media(max-width: 700px) {
     .role-container {
-      display: flex;
-      justify-content: center; 
-      align-items: center;  
-      gap: 30px;
-      flex-wrap: wrap;     
-      width: 100%;
-      max-width: 900px;
-      padding: 20px;
-    }
-    
-    .navbar {
-      width: 100%;
-      max-width: 100%;    
-      box-sizing: border-box;
-      background-color: orange;
-      padding: 15px;
-      border-radius: 30px;
-      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-      font-size: large;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .navbar a {
-      color: rgb(12, 12, 12);
-      text-decoration: none;
-      padding: 10px 20px;
-    }
-
-    .navbar a:hover {
-      background: #d6dddb;
-      color: #2d3436;
-      border-radius: 5px;
-    }
-
-    .farmer, .buyer, .admin {
-      width: 100%;
-      display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      border-radius: 15px;
-      text-align: center;
-      padding: 40px 20px;
-      height: 20vh;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      cursor: pointer;
+      gap: 30px;
     }
-
-    .farmer { background: linear-gradient(135deg, #27ae60, #2ecc71); }
-    .buyer { background: linear-gradient(135deg, #1abc9c, #16a085); }
-    .admin { background: linear-gradient(135deg, #e67e22, #d35400); }
-
-    .farmer:hover, .buyer:hover, .admin:hover {
-      transform: scale(1.05);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+    .role-card {
+      width: 90%;
     }
-
-    h2 {
-      margin-bottom: 10px;
-      font-size: 1.8rem;
-    }
-
-    p {
-      margin: 0;
-      font-size: 1rem;
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
   <div class="navbar">
@@ -99,62 +114,16 @@
     <a href="#">ABOUT</a>
   </div>
 
-<div class="role-container">
-    <a class="farmer" href="fsignup.html" style="text-decoration: none;">
-  <h2>FARMER</h2>
-  <p>List your harvests, set fair prices, and reach global buyers directly.</p>
-</a>
-
-
-    <a class="buyer" href="bsignup.html" style="text-decoration: none;">
-      <h2>BUYER</h2>
-      <p>Discover fresh farm produce, organic goods, and handcrafted items.</p>
-    </a>
-
-    
-
-    <a class="admin" href="backend/signup.php?role=admin" style="text-decoration: none;">
-      <h2>ADMIN</h2>
-      <p>Discover and find your records.</p>
-    </a>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <div class="role-container">
-    <div class="buyer" onclick="window.location.href='buyer.html'">
-      <h2>BUYER</h2>
-      <p>Discover fresh farm produce, organic goods, and handcrafted items.</p>
-    </div>
-
-    <div class="farmer" onclick="window.location.href='farmer.html'">
+    <a class="role-card farmer" href="fsignup.html">
       <h2>FARMER</h2>
       <p>List your harvests, set fair prices, and reach global buyers directly.</p>
-    </div>
+    </a>
 
-    <div class="admin" onclick="window.location.href='admin.html'">
-      <h2>ADMIN</h2>
-      <p>Discover and find your records.</p>
-    </div>
+    <a class="role-card buyer" href="bsignup.html">
+      <h2>BUYER</h2>
+      <p>Discover fresh farm produce, organic goods, and handcrafted items.</p>
+    </a>
   </div>
 </body>
 </html>
